--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+_security_check:
+  pattern:  /login_facebook_check
+  
+_security_logout:
+    pattern:  /logout
+
 MuzichIndexBundle:
   resource: "@MuzichIndexBundle/Resources/config/routing.yml"
   prefix: /
