--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
         "sonata-project/admin-bundle": "2.1.*@dev",
         "sonata-project/jquery-bundle": "1.8.*@dev",
-        "sonata-project/block-bundle": "2.1.*@dev"
+        "sonata-project/block-bundle": "2.1.*@dev",
+        "friendsofsymfony/facebook-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
