Anomalie #731: Err. 500: Modération tag
Configuration des actions admin generated: manqué le paramètre dans la definition

--- a/src/Muzich/AdminBundle/Resources/config/Moderate_tag-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Moderate_tag-generator.yml
@@ -14,10 +14,14 @@ builders:
       object_actions:
         accept:
           route: Muzich_AdminBundle_Moderate_tag_accept
+          params:
+            pk: "{{ Tag.id }}"
           icon: icon-ok-sign
           class: moderate_accept
         refuse:
           route: Muzich_AdminBundle_Moderate_tag_refuse
+          params:
+            pk: "{{ Tag.id }}"
           icon: icon-trash
           class: moderate_refuse
       sort: [ tomoderate, DESC ]
