--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -198,6 +198,10 @@ element_dom_get_one:
   pattern: /ajax/element/dom/get/{type}/{element_id}
   defaults: { _controller: MuzichCoreBundle:Element:getOneDom, element_id: null }
 
+element_get_one:
+  pattern: /ajax/element/get/{element_id}
+  defaults: { _controller: MuzichCoreBundle:Element:getOne }
+
 element_get_stream_data:
   pattern: /ajax/element/data/get/stream/{element_id}
   defaults: { _controller: MuzichCoreBundle:Element:geJamendotStreamDatas, element_id: null }
