--- a/src/Muzich/PlaylistBundle/Resources/config/routing.yml
+++ b/src/Muzich/PlaylistBundle/Resources/config/routing.yml
@@ -9,3 +9,24 @@ playlist:
 playlist_datas_for_autoplay:
   pattern: /ajax/autoplay/playlist/datas/{playlist_id}/{offset}
   defaults: { _controller: MuzichPlaylistBundle:Show:getAutoplayData, offset: null }
+
+playlist_update_order:
+  pattern: /ajax/playlist/order/update/{playlist_id}
+  defaults: { _controller: MuzichPlaylistBundle:Edit:updateOrder }
+
+playlist_remove_element:
+  pattern: /ajax/playlist/element/remove/{playlist_id}/{element_id}
+  defaults: { _controller: MuzichPlaylistBundle:Edit:removeElement }
+
+playlists_add_element_prompt:
+  pattern: /ajax/playlist/element/add/prompt/{element_id}
+  defaults: { _controller: MuzichPlaylistBundle:Show:getAddElementPrompt }
+
+playlists_add_element:
+  pattern: /ajax/playlist/element/add/{playlist_id}/{element_id}
+  defaults: { _controller: MuzichPlaylistBundle:Edit:addElement }
+
+playlist_add_element_and_create:
+  pattern: /ajax/playlist/element/add-and-create/{element_id}
+  defaults: { _controller: MuzichPlaylistBundle:Edit:addElementAndcreate }
+  
