--- a/src/Muzich/PlaylistBundle/Resources/config/routing.yml
+++ b/src/Muzich/PlaylistBundle/Resources/config/routing.yml
@@ -6,6 +6,10 @@ playlist:
   pattern: /user/{user_slug}/playlist/{playlist_id}
   defaults: { _controller: MuzichPlaylistBundle:Show:show }
 
+playlist_delete:
+  pattern: /playlist/delete/{playlist_id}
+  defaults: { _controller: MuzichPlaylistBundle:Edit:delete }
+
 playlist_datas_for_autoplay:
   pattern: /ajax/autoplay/playlist/datas/{playlist_id}/{offset}
   defaults: { _controller: MuzichPlaylistBundle:Show:getAutoplayData, offset: null }
