--- a/src/Muzich/PlaylistBundle/Resources/config/routing.yml
+++ b/src/Muzich/PlaylistBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 playlists_user:
   pattern: /user/{user_slug}/playlists
-  defaults: { _controller: MuzichPlaylistBundle:Show:user }
+  defaults: { _controller: MuzichPlaylistBundle:Show:user, topmenu: playlists }
 
 playlist:
   pattern: /user/{user_slug}/playlist/{playlist_id}
