Evolution #710: Confirmation de l'email: si pas connecté ?

--- a/src/Muzich/CoreBundle/Resources/config/security.yml
+++ b/src/Muzich/CoreBundle/Resources/config/security.yml
@@ -19,7 +19,7 @@ security:
             pattern:      .*
             form_login:
                 provider:       fos_userbundle
-                login_path:     home
+                login_path:     home_login
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
@@ -98,6 +98,8 @@ security:
         - { path: ^/(?:fr|en)/event/view/elements, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/test-error, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/share-from, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/(?:fr|en)/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/(?:fr|en)/account/email/confirm/, role: IS_AUTHENTICATED_ANONYMOUSLY }
         
         ## New public roads for visitors
         - { path: ^/(?:fr|en)$, role: IS_AUTHENTICATED_ANONYMOUSLY }
