admin: fix probleme de liens générés

--- a/src/Muzich/AdminBundle/Resources/config/Admin_element-generator.yml
+++ b/src/Muzich/AdminBundle/Resources/config/Admin_element-generator.yml
@@ -21,6 +21,8 @@ builders:
         show: ~
         regenerate:
           route: Muzich_AdminBundle_Admin_element_regenerate
+          params:
+            pk: "{{ Element.id }}"
         edit: ~
         delete: ~
   filters:
