--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,19 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.1.8",
-        "doctrine/orm": ">=2.2.3,<2.5-dev",
-        "doctrine/doctrine-bundle": "1.1.*",
+        "symfony/symfony": "v2.2.3",
+        "doctrine/orm": "2.3.4",
+        "doctrine/doctrine-bundle": "v1.2.0",
         "twig/extensions": "1.0.*@dev",
-        "symfony/assetic-bundle": "2.3.*",
-        "symfony/swiftmailer-bundle": "2.1.*",
-        "symfony/monolog-bundle": "2.1.*",
-        "sensio/distribution-bundle": "2.1.*",
-        "sensio/framework-extra-bundle": "2.1.*",
-        "sensio/generator-bundle": "2.1.*",
-        "jms/security-extra-bundle": "1.2.*",
-        "jms/di-extra-bundle": "1.1.*",
-        "kriswallsmith/assetic": "1.1.*@dev",
+        "symfony/assetic-bundle": "v2.3.0",
+        "symfony/swiftmailer-bundle": "v2.2.3",
+        "symfony/monolog-bundle": "v2.2.0",
+        "sensio/distribution-bundle": "v2.2.3",
+        "sensio/framework-extra-bundle": "v2.2.3",
+        "sensio/generator-bundle": "v2.2.3",
+        "jms/security-extra-bundle": "1.5.1",
+        "jms/di-extra-bundle": "1.4.0",
+        "kriswallsmith/assetic": "v1.1.1",
         
         "friendsofsymfony/user-bundle": "v1.3.1",
         "doctrine/data-fixtures" : "dev-master", 
@@ -31,10 +31,10 @@
         "white-october/pagerfanta-bundle": "2.1.*@dev",
         "pagerfanta/pagerfanta": "1.0.*@dev",
         "shtumi/useful-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "2.1.*@dev",
-        "sonata-project/admin-bundle": "2.1.*@dev",
+        "sonata-project/doctrine-orm-admin-bundle": "2.2.1",
+        "sonata-project/admin-bundle": "2.2.2",
         "sonata-project/jquery-bundle": "1.8.*@dev",
-        "sonata-project/block-bundle": "2.1.*@dev",
+        "sonata-project/block-bundle": "2.2.3",
         "friendsofsymfony/facebook-bundle": "dev-master"
     },
     "scripts": {
