Evolution #792: Log me and do what i want to do
+ Prise en charge de ajouter un élément
+ Prise en charge de ajouter un commentaire

--- a/src/Muzich/CoreBundle/Resources/config/routing.yml
+++ b/src/Muzich/CoreBundle/Resources/config/routing.yml
@@ -222,3 +222,6 @@ get_csrf_token:
   pattern: /ajax/getcsrf
   defaults: { _controller: MuzichCoreBundle:Core:getCsrfToken }
   
+reload_top_right_bars:
+  pattern: /ajax/reload-bars
+  defaults: { _controller: MuzichCoreBundle:Core:reloadTopEndSideBar }
