--- a/src/Muzich/PlaylistBundle/Resources/config/routing.yml
+++ b/src/Muzich/PlaylistBundle/Resources/config/routing.yml
@@ -21,15 +21,15 @@ playlist_update:
   defaults: { _controller: MuzichPlaylistBundle:Edit:update }
 
 playlist_delete:
-  pattern: /private/playlist/delete/{playlist_id}/{token}
+  pattern: /playlist/delete/{playlist_id}/{token}
   defaults: { _controller: MuzichPlaylistBundle:Edit:delete }
 
 playlist_unpick:
-  pattern: /private/playlist/unpick/{playlist_id}/{token}/{redirect_owner}
+  pattern: /playlist/unpick/{playlist_id}/{token}/{redirect_owner}
   defaults: { _controller: MuzichPlaylistBundle:Edit:unpick, redirect_owner: false }
 
 playlist_pick:
-  pattern: /private/playlist/pick/{playlist_id}/{token}/{redirect_owner}
+  pattern: /playlist/pick/{playlist_id}/{token}/{redirect_owner}
   defaults: { _controller: MuzichPlaylistBundle:Edit:pick, redirect_owner: false }
 
 playlist_add_private_links:
