--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "v2.2.3",
+        "symfony/symfony": "v2.2.4",
         "doctrine/orm": "2.3.4",
         "doctrine/doctrine-bundle": "v1.2.0",
         "twig/extensions": "1.0.*@dev",
@@ -35,7 +35,15 @@
         "sonata-project/admin-bundle": "2.2.2",
         "sonata-project/jquery-bundle": "1.8.*@dev",
         "sonata-project/block-bundle": "2.2.3",
-        "friendsofsymfony/facebook-bundle": "dev-master"
+        "friendsofsymfony/facebook-bundle": "dev-master",
+        
+        "doctrine/mongodb-odm-bundle": "v3.0.0-BETA4",
+        "doctrine/mongodb-odm": "1.0.0-BETA9",
+        "symfony/options-resolver": "v2.2.4",
+        "symfony/doctrine-bridge": "v2.2.4",
+        "doctrine/mongodb": "1.0.0-BETA1"
+        
+        
     },
     "scripts": {
         "post-install-cmd": [
