--- a/composer.json
+++ b/composer.json
@@ -16,26 +16,24 @@
         "symfony/monolog-bundle": "v2.2.0",
         "sensio/distribution-bundle": "v2.2.3",
         "sensio/framework-extra-bundle": "v2.2.3",
-        "sensio/generator-bundle": "v2.2.3",
+        "sensio/generator-bundle": "v2.3.3",
         "jms/security-extra-bundle": "1.5.1",
         "jms/di-extra-bundle": "1.4.0",
         "kriswallsmith/assetic": "v1.1.1",
         
         "friendsofsymfony/user-bundle": "v1.3.1",
-        "doctrine/data-fixtures" : "dev-master", 
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "stof/doctrine-extensions-bundle": "dev-master",  
-        "gregwar/image-bundle": "dev-master",
-        "cedriclombardot/admingenerator-generator-bundle": "2.1.*@dev",
-        "cedriclombardot/twig-generator": "dev-master",
-        "white-october/pagerfanta-bundle": "2.1.*@dev",
-        "pagerfanta/pagerfanta": "1.0.*@dev",
-        "shtumi/useful-bundle": "dev-master",
+        "doctrine/data-fixtures" : "v1.0.0-ALPHA4",
+        "doctrine/doctrine-fixtures-bundle": "2.2.1",
+        "stof/doctrine-extensions-bundle": "v1.2.0",
+        "gregwar/image-bundle": "v2.0.19",
+        "cedriclombardot/admingenerator-generator-bundle": "v1.0.0",
+        "cedriclombardot/twig-generator": "v1.0.0",
+        "shtumi/useful-bundle": "dev-master#c48ef1a",
         "sonata-project/doctrine-orm-admin-bundle": "2.2.1",
         "sonata-project/admin-bundle": "2.2.2",
         "sonata-project/jquery-bundle": "1.8.*@dev",
         "sonata-project/block-bundle": "2.2.3",
-        "friendsofsymfony/facebook-bundle": "dev-master",
+        "friendsofsymfony/facebook-bundle": "1.2.1",
         
         "doctrine/mongodb-odm-bundle": "v3.0.0-BETA4",
         "doctrine/mongodb-odm": "1.0.0-BETA9",
