--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
  - sudo apt-get install -q -y git curl gnupg apt-transport-https lsb-release ca-certificates zip unzip wget lsb-release
  - cp app/config/config.yml.template app/config/config.yml
  - cp app/config/parameters.yml.template app/config/parameters.yml
- - php composer.phar install
+ - COMPOSER_MEMORY_LIMIT=-1 php composer.phar install
  - sudo mysql --execute "CREATE USER 'muzich'@'localhost';"
  - sudo mysql --execute "CREATE DATABASE muzich_test;"
  - sudo mysql --execute "GRANT ALL PRIVILEGES ON muzich_test.* To 'muzich'@'localhost' IDENTIFIED BY 'muzich';"
