--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -6,8 +6,8 @@
     backupStaticAttributes      = "false"
     colors                      = "true"
     convertErrorsToExceptions   = "true"
-    convertNoticesToExceptions  = "true"
-    convertWarningsToExceptions = "true"
+    convertNoticesToExceptions  = "false"
+    convertWarningsToExceptions = "false"
     processIsolation            = "false"
     stopOnFailure               = "false"
     syntaxCheck                 = "false"
@@ -19,11 +19,10 @@
         </testsuite>
     </testsuites>
 
-    <!--
     <php>
-        <server name="KERNEL_DIR" value="/path/to/your/app/" />
+        <!--<server name="KERNEL_DIR" value="/path/to/your/app/" />-->
+        <env name="SYMFONY_DEPRECATIONS_HELPER" value="weak" />
     </php>
-    -->
     
     <filter>
       <blacklist>
